--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "katex": "^0.16.22",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-katex": "^3.0.1",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
