--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "axios": "^1.9.0",
+    "firebase": "^11.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "whisper-wasm": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
