--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-katex": "^3.0.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
